[package]
name = "orca"
version = "0.1.0"
edition = "2021"
description = "Orca is Automation Tool for testing framework that will help to automate the application testing faster"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]


[dependencies]
actix = "0.10.0"
actix-http = "2"
actix-web = "3"
actix-flash = "0.2"
actix-files = "0.5"
actix-web-actors = "3.0.0"
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
tera = "1.8.0"
dotenv = "0.15"
listenfd = "0.3.3"
serde = { version = "1.0.123", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.12"
lazy_static = "1.4.0"
redis = "0.21.5"
sea-orm = { version = "0.6.0", default-features = false, features = [ "macros", "debug-print", "runtime-async-std-native-tls", "sqlx-postgres"] }
base={path="base", version="0.1.0"}
