[package]
name = "orca"
version = "0.1.0"
edition = "2021"
description = "Orca is Automation Tool for testing framework that will help to automate the application testing faster"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]


[dependencies]
base64 = "0.13.0"
log = "0.4.16"
http = "0.2.8"
thiserror = "1.0.31"
jsonwebtoken = "8"
chrono = "0.4"
rand = { version = "0.7", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix = "0.13.0"
actix-service = "2.0.2"
actix-http = "3.0.4"
actix-web = "4.0.1"
actix-flash = "0.2"
actix-files = "0.6.0"
actix-web-actors = "4.1.0"
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
tera = "1.8.0"
dotenv = "0.15"
listenfd = "0.5.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.59"
config = "0.12"
lazy_static = "1.4.0"
redis = "0.21.5"
entity = { path = "entity" }
migration = { path = "migration" }

sea-orm = { version = "0.8.0", default-features = true, features = [ "macros", "debug-print", "runtime-async-std-native-tls", "sqlx-postgres"] }
