## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
name = "orca"
members=[
    "crates/libs/cerium",
    "crates/libs/entity",
    "crates/libs/migration",
    "crates/services/engine",
    "crates/services/api",
]

[workspace.package]
authors = [ "Vasanth Kumar <mail@itsparser.in>" ]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/orca/"
homepage = "https://github.com/orcaci/orca"
repository = "https://github.com/orcaci/orca"
rust-version = "1.74.1"
exclude = [".github/**"]


[workspace.dependencies]
cerium = { path = "crates/libs/cerium", default-features = true }
entity = { path = "crates/libs/entity", default-features = true }
migration = { path = "crates/libs/migration", default-features = true }
engine = { path = "crates/services/engine", default-features = true }
api = { path = "crates/services/api", default-features = true }

thiserror = "1.0.31"
jsonwebtoken = "8"
serde = { version = "1.0.147"}
serde_json = "1.0.87"
chrono = { version = "0.4.31"}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

sea-query = "0.30.5"
sea-orm = { version = "0.12.3",  features = [
  "macros",
  "debug-print",
  "runtime-async-std-native-tls",
  "sqlx-postgres",
] }
sea-orm-migration = {version = "0.12.3", features = ["sqlx-postgres"]}

axum = "0.7.1"
axum-extra = "0.8.0"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", default-features = true, features = ["uuid", "cors", "trace", "compression-br", "catch-panic", "request-id"] }

config = "0.13.3"

dotenv = "0.15.0"
futures = "0.3.29"
futures-util = "0.3.29"
rust_decimal = "1.14.3"
cross-test = "0.1.6"

[patch.crates-io]
sea-orm = { git="https://github.com/itsparser/sea-orm", branch = "master" }