[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Vasanthkumar Kalaiselvan <itsparser@gmail.com>"]


[[bin]]
name = "api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
env_logger = "0.10.0"
clap="4.0.32"
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors="4.1.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
chrono = "0.4.23"
tokio="1.23.0"
async_once = "0.2.6"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

sea-orm = { version = "0.10.6", default-features = true, features = [ "macros", "debug-print", "runtime-async-std-native-tls", "sqlx-postgres"] }


cerium = { path="../cerium" }
migration = { path="../migration" }
entity = { path="../entity" }



[dev-dependencies]
rust_decimal = "1.14.3"
tokio = { version = "1.0", features = ["full"] }
cross-test = "0.1.6"
futures = "0.3"
dotenv = "0.15.0"
