[package]
name = "base"
version = "0.1.0"
edition = "2021"
description = "Engine Have all the common code for the Besozzi"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
thiserror = "1.0.31"
actix = "0.13.0"
actix-service = "2.0.2"
actix-http = "3.0.4"
actix-web = "4.0.1"
actix-flash = "0.2"
actix-files = "0.6.0"
actix-web-actors = "4.1.0"
futures = { version = "0.3" , features = ["compat", "executor"] }
futures-util = { version = "^0.3" }
tera = "1.8.0"
dotenv = "0.15"
listenfd = "0.5.0"
log = "0.4"
rand = { version = "0.7", default-features = false, features = ["std"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.59"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.12"
lazy_static = "1.4.0"
redis = "0.21.5"
sea-orm = { version = "0.8.0", default-features = true, features = [ "macros", "debug-print", "runtime-async-std-native-tls", "sqlx-postgres"] }