[package]
name = "cerium"
version = "0.1.0"
edition = "2021"
description = "Cerium - is core libirary for the orca application"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "tests"
path = "tests"

[lib]
name = "cerium"
crate-type = ["lib"]

[dependencies]
lazy_static = "1.4.0"
async_once = "0.2.6"
log = "0.4.16"
env_logger = "0.10.0"
config = "0.13.3"
jsonwebtoken = "8"
thiserror = "1.0.31"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
surrealdb-rs = { git="https://github.com/surrealdb/surrealdb.rs" }
actix-web = "4.2.1"
http = "0.2.8"
sea-orm = {version = "0.11.0", default-features = true}
rand = { version = "0.8.5", default-features = false, features = ["std"] }

