[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Engine Have all the common code for the Orca"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.59"
tokio = "1.17.0"
thirtyfour = "0.28.3"
sea-orm = { version = "0.6.0", default-features = false, features = [ "macros", "debug-print", "runtime-async-std-native-tls", "sqlx-postgres"] }
base = {path="../base"}
entity = {path="../entity"}