[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Engine Have all the common code for the Orca"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "engine"
src = "src/main.rs"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
log = "0.4.16"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.59"
tokio = "1.17.0"
thirtyfour = "0.28.3"
sea-orm = { version = "0.8.0", default-features = true, features = [ "macros", "debug-print", "runtime-async-std-native-tls", "sqlx-postgres"] }
entity = {path="../entity"}


[features]
ui-integration-test = []
api-test = []
default = ["ui-integration-test", "api-test"]
