[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Engine Have all the common code for the Orca"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]


[lib]
name = "engine"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.59"
tokio = "1.17.0"
thirtyfour = "0.31.0"

entity = { path = "../entity" }
cerium = { path = "../cerium"}


[features]
api-automation = []
ui-automation = []
default = ["ui-automation", "api-automation"]
