[package]
name = "entity_macro"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
sea-orm.workspace=true
sea-query.workspace=true

serde = { version = "1.0.193", features = ["derive"] }