[package]
name = "chrome"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main"}
async-std = "1.12.0"
futures = "0.3.29"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}

